--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,124 @@
     <string name="title_activity_admin">AdminActivity</string>
     <string name="title_activity_user_admin">UserAdminActivity</string>
     <string name="title_activity_user_home_main">UserHomeMainActivity</string>
+
+
+
+    <string-array name="day_array">
+        <item>Day</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+    </string-array>
+    <string-array name="month_array">
+        <item>Month</item>
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </string-array>
+    <string-array name="year_array">
+        <item>Year</item>
+        <item>26</item>
+        <item>25</item>
+        <item>24</item>
+        <item>23</item>
+        <item>22</item>
+        <item>21</item>
+        <item>20</item>
+
+
+    </string-array>
+    <string-array name="time_array">
+        <item>Select</item>
+        <item>0:00</item>
+        <item>1:00</item>
+        <item>2:00</item>
+        <item>3:00</item>
+        <item>4:00</item>
+        <item>5:00</item>
+        <item>6:00</item>
+        <item>7:00</item>
+        <item>8:00</item>
+        <item>9:00</item>
+        <item>10:00</item>
+        <item>11:00</item>
+        <item>12:00</item>
+        <item>13:00</item>
+        <item>14:00</item>
+        <item>15:00</item>
+        <item>16:00</item>
+        <item>17:00</item>
+        <item>18:00</item>
+        <item>19:00</item>
+        <item>20:00</item>
+        <item>21:00</item>
+        <item>22:00</item>
+        <item>23:00</item>
+    </string-array>
+    <string-array name="banks_array">
+        <item>Select a Bank</item>
+        <item>Access Bank</item>
+        <item>Citibank</item>
+        <item>Diamond Bank</item>
+        <item>Ecobank Nigeria</item>
+        <item>Enterprise Bank Limited</item>
+        <item>Fidelity Bank Nigeria</item>
+        <item>First Bank of Nigeria</item>
+        <item>First City Monument Bank</item>
+        <item>FSDH Merchant Bank</item>
+        <item>Guaranty Trust Bank</item>
+        <item>Heritage Bank Plc.</item>
+        <item>Keystone Bank Limited</item>
+        <item>Mainstreet Bank Limited</item>
+        <item>Rand Merchant Bank</item>
+        <item>Savannah Bank</item>
+        <item>Skye Bank</item>
+        <item>Stanbic IBTC Bank Nigeria Limited</item>
+        <item>Standard Chartered Bank</item>
+        <item>Sterling Bank</item>
+        <item>Union Bank of Nigeria</item>
+        <item>United Bank for Africa</item>
+        <item>Unity Bank Plc.</item>
+        <item>Wema Bank</item>
+        <item>Zenith Bank</item>
+    </string-array>
+
+
 </resources>
